adjusted navbar and fixed collapsed nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,21 @@ h1, h2, h3, h4, h5, h6 {
     height: 350px;
 }
 
+@media (max-width: 768px) {
 
+.list-inline-item:not(:last-child) {
+     margin-right: 0; 
+}
+
+}
+
+@media (min-width: 992px) {
+
+.collapse:not(.show) {
+    display: block;
+}
+
+}
 
 nav {
     margin: 0;
@@ -148,7 +162,7 @@ nav {
 
 
 .list-inline-item {
-    margin: 5px,0;
+    margin: 5px 0;
 }
 
 .menuItem {
